--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1,3 +1,25 @@
 .red {
     color: red;
 }
+
+body {
+    background: #E0EAFC;  
+    background: -webkit-linear-gradient(to left, #CFDEF3, #E0EAFC);  
+    background: linear-gradient(to left, #CFDEF3, #E0EAFC); 
+}
+
+h2 {
+    text-align: center
+}
+
+h3 {
+    text-align: center
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    width: 10% 
+}
